deploy/k8s/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask
  labels:
    service: flask

spec:
  selector:
    app: converter
  ports:
    - port: 30008
      targetPort: 5000
